<resources>
    <string name="app_name">PassTogether</string>

    <string name="register">Inregistrare</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="name">Nume</string>
    <string name="password">Parola</string>
    <string name="birthday">Data nasterii</string>
    <string name="noAccount">Nu ai cont? Inregistreaza-te aici</string>
    <string name="logOut">Log Out</string>
    <string name="resetPassword">Reseteaza-ti parola</string>
    <string name="setari">Setari</string>
    <string name="updateProfile">Actualizare informatii</string>

    <string name="invalidEmail">Email-ul e invalid</string>
    <string name="invalidPass">Parola e prea simpla!</string>
    <string name="invalidName">Numele trebuie sa fie format doar din litere si spatii</string>
    <string name="invalidDateFormat">Formatul zilei de nastere este dd/mm/yyyy</string>
    <string name="invalidDate">Trebuie sa ai 14 ani ca sa te poti inregistra</string>
    <string name="blankInputs">Campurile nu au voie sa fie necompletate</string>
    <string name="search">Acceseaza</string>
    <string name="chooseTopic">Alege topicul</string>
    <string name="invalidTopic">Nu am gasit topicul ales :(</string>
    <string name="profile">Profilul tau</string>
    <string name="loading">Se incarca datele..</string>
    <string name="addPost">Postare noua</string>
    <string name="addPostHint">Descrie problema..</string>
    <string name="postError">Scrie ceva mai complex..</string>
    <string name="commentTo">"Raspunde-i la "</string>
    <string name="comments">Comentarii</string>
    <string name="settings">Setari</string>
    <string name="showMyPosts">Arata postarile mele</string>
    <string name="noPosts">Nu ai nicio postare</string>
    <string name="hello">Salut %1$s,\nLa ce vrei sa te pregatesti?</string>
    <string name="age">Varsta</string>
    <string name="karma">Karma</string>
    <string name="postsAndComments">Postari si comentarii</string>
    <string name="numberOfPosts">%1$s postari / %2$s comentarii</string>
    <string name="yearsSince">%1$s ani</string>
    <string name="settingsWithName">Setari - %1$s</string>
    <string name="commentsLoading">Se incarca comentariile</string>
    <string name="loadingParent">Se incarca postarea mama</string>
    <string name="noPostsUser">Nu exista nicio postare de afisat</string>

</resources>
