<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:bind="http://schemas.android.com/tools"

    android:layout_width="fill_parent"
    android:layout_height="fill_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="48dp"
        android:paddingLeft="24dp"
        android:paddingRight="24dp"
        android:gravity="center_horizontal"
        android:id="@+id/constraintLayout">

        <ImageView
            android:id="@+id/logo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:layout_conversion_absoluteHeight="63dp"
            tools:layout_conversion_absoluteWidth="72dp"
            android:scaleType="fitXY"/>

        <TextView
            android:id="@+id/titlu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/profile"
            android:textAlignment="center"
            android:textColor="#000000"
            android:textIsSelectable="false"
            android:textSize="32sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/logo"
            tools:layout_conversion_absoluteHeight="43dp"
            tools:layout_conversion_absoluteWidth="363dp" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/l_email"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            app:boxBackgroundMode="none"
            app:hintEnabled="false"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/titlu"
            app:startIconDrawable="@drawable/email"
            tools:layout_conversion_absoluteHeight="53dp"
            tools:layout_conversion_absoluteWidth="363dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/email"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email"

                android:focusable="false"
                android:focusableInTouchMode="false"
                android:clickable="false"
                android:longClickable="false"
                android:cursorVisible="false"

                tools:layout_conversion_absoluteHeight="53dp"
                tools:layout_conversion_absoluteWidth="363dp"
                tools:layout_editor_absoluteX="24dp"
                tools:layout_editor_absoluteY="251dp" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/l_nume"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            app:boxBackgroundMode="none"
            app:hintEnabled="false"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/l_email"
            app:startIconDrawable="@drawable/name"
            tools:layout_conversion_absoluteHeight="53dp"
            tools:layout_conversion_absoluteWidth="363dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/nume"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:hint="@string/name"
                android:inputType="textNoSuggestions"
                tools:layout_conversion_absoluteHeight="53dp"
                tools:layout_conversion_absoluteWidth="363dp"
                tools:layout_editor_absoluteX="24dp"
                tools:layout_editor_absoluteY="321dp" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/l_pass"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            app:boxBackgroundMode="none"
            app:hintEnabled="false"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/l_nume"
            app:passwordToggleEnabled="true"
            app:startIconDrawable="@drawable/password"
            tools:layout_conversion_absoluteHeight="53dp"
            tools:layout_conversion_absoluteWidth="363dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/pass"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password"
                android:inputType="textPassword"
                tools:layout_conversion_absoluteHeight="53dp"
                tools:layout_conversion_absoluteWidth="363dp"
                tools:layout_editor_absoluteX="24dp"
                tools:layout_editor_absoluteY="390dp" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/l_birthday"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            app:boxBackgroundMode="none"
            app:hintEnabled="false"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/l_pass"
            app:startIconDrawable="@drawable/birthday"
            tools:layout_conversion_absoluteHeight="53dp"
            tools:layout_conversion_absoluteWidth="363dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/birthday"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:hint="@string/birthday"
                android:inputType="date"
                tools:layout_conversion_absoluteHeight="53dp"
                tools:layout_conversion_absoluteWidth="363dp"
                tools:layout_editor_absoluteX="24dp"
                tools:layout_editor_absoluteY="459dp" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/errField"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginStart="6dp"
            android:textColor="@color/red"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/l_birthday"
            tools:layout_conversion_absoluteHeight="19dp"
            tools:layout_conversion_absoluteWidth="0dp" />

        <Button
            android:id="@+id/updateBtn"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:height="56dp"
            android:backgroundTint="@color/main"
            android:text="@string/updateProfile"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/errField"
            tools:layout_conversion_absoluteHeight="56dp"
            tools:layout_conversion_absoluteWidth="363dp" />

        <TextView
            android:id="@+id/loading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/loading"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
