<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Profile">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/my_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="#00ffffff"
        android:elevation="4dp"
        app:logo="@drawable/icon48"
        />

    <ImageView
        android:id="@+id/profilePicture"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="invisible"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/my_toolbar"
        android:layout_margin="18dp"
        android:src="@drawable/icon192"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/l_age"
        android:visibility="invisible"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:boxBackgroundMode="none"
        app:hintEnabled="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/profilePicture"
        app:layout_constraintTop_toBottomOf="@+id/my_toolbar"
        app:startIconDrawable="@drawable/birthday"
        tools:layout_conversion_absoluteHeight="53dp"
        tools:layout_conversion_absoluteWidth="363dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/age"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/age"

            android:focusable="false"
            android:focusableInTouchMode="false"
            android:clickable="false"
            android:longClickable="false"
            android:cursorVisible="false"

            tools:layout_conversion_absoluteHeight="53dp"
            tools:layout_conversion_absoluteWidth="363dp"
            tools:layout_editor_absoluteX="24dp"
            tools:layout_editor_absoluteY="251dp" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/l_karma"
        android:visibility="invisible"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:boxBackgroundMode="none"
        app:hintEnabled="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/profilePicture"
        app:layout_constraintTop_toBottomOf="@+id/l_age"
        app:startIconDrawable="@drawable/karma"
        tools:layout_conversion_absoluteHeight="53dp"
        tools:layout_conversion_absoluteWidth="363dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/karma"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/karma"

            android:focusable="false"
            android:focusableInTouchMode="false"
            android:clickable="false"
            android:longClickable="false"
            android:cursorVisible="false"

            tools:layout_conversion_absoluteHeight="53dp"
            tools:layout_conversion_absoluteWidth="363dp"
            tools:layout_editor_absoluteX="24dp"
            tools:layout_editor_absoluteY="251dp" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/l_numberOfPosts"
        android:visibility="invisible"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:boxBackgroundMode="none"
        app:hintEnabled="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/profilePicture"
        app:layout_constraintTop_toBottomOf="@+id/l_karma"
        app:startIconDrawable="@drawable/posts"
        tools:layout_conversion_absoluteHeight="53dp"
        tools:layout_conversion_absoluteWidth="363dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/numberOfPosts"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/postsAndComments"

            android:focusable="false"
            android:focusableInTouchMode="false"
            android:clickable="false"
            android:longClickable="false"
            android:cursorVisible="false"

            tools:layout_conversion_absoluteHeight="53dp"
            tools:layout_conversion_absoluteWidth="363dp"
            tools:layout_editor_absoluteX="24dp"
            tools:layout_editor_absoluteY="251dp" />
    </com.google.android.material.textfield.TextInputLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView"
        android:visibility="invisible"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:paddingBottom="16dp"
        android:layout_marginTop="12dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/profilePicture"/>

</androidx.constraintlayout.widget.ConstraintLayout>